@@ -1,3 +1,8 @@
+2003-08-03  Derek Atkins  <derek@ihtfp.com>
+
+	* src/gnome/druid-loan.c: Apply patch to fix a number of
+	  off-by-one bugs in the loan druid.  Fixes #119001.
+
 2003-07-30  Derek Atkins  <derek@ihtfp.com>
 
 	* src/gnome-utils/gnc-account-tree.c: add "(Report)" strings
